# wiimote-bridge

./: CMakeLists.txt
.github/workflows/: CI.yml
wiimotebridged/: CMakeLists.txt  osc.c  osc.h  wiimotebridged.c
wiimtebridged/: CMakeLists.txt  wiimtebridged.c
